--- a/filstructure_chapter1/fschapter1.vcxproj.filters
+++ b/filstructure_chapter1/fschapter1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="testStudent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="student.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="person.h">
