finished readper.cpp
worked on readper.cpp
practicing ifstream and ofstream

--- a/filestructure_chapter2/fspj2.vcxproj.filters
+++ b/filestructure_chapter2/fspj2.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="writestr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="readper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="person.h">
